--- a/reload_all_tabs/options.css
+++ b/reload_all_tabs/options.css
@@ -9,8 +9,44 @@ a {
   color: blue;
   font-size: 100%;
 }
+
+dl {
+}
+
+dt {
+width: 15em;
+padding: .5em;
+float: left;
+margin: 0;
+}
+
+dd {
+margin-left: 16em;
+padding: .4em;
+}
+
+
+h1 {
+  background: url("icon48.png") 0px 30px no-repeat;
+  display: inline;
+  margin: 0;
+  padding-bottom: 43px;
+  padding-left: 55px;
+  padding-top: 40px;
+  font-size: 150%;
+  font-weight: bold;
+}
  
-div#header {
+button {
+  font-size: 100%;
+}
+
+em {
+  font-size: 50%;
+  font-weight: normal;
+}
+
+#header {
   margin-bottom: 1.05em;
   overflow: hidden;
   padding-bottom: 1.5em;
@@ -18,81 +54,38 @@ div#header {
   padding-top: 1.5em;
   position: relative;
 }
-div#header h1 {
-  background: url("icon48.png") 0px 30px no-repeat;
-  display: inline;
-  margin: 0;
-  padding-bottom: 43px;
-  padding-left: 55px;
-  padding-top: 40px;
+
+#extension-template {
+  border-bottom: 1px solid #cdcdcd;
 }
- 
-h1 {
-  font-size: 150%;
-  font-weight: bold;
-  padding: 0;
-  margin: 0;
-}
- 
-div.content {
-  font-size: 84%;
-  margin-top: 5px;
-}
- 
-.section-header {
+
+#extension-header {
   background: #ebeff9;
   border-top: 1px solid #b5c7de;
   font-size: 95%;
-  padding-bottom: 2px;
-  padding-left: 5px;
-  padding-top: 3px;
-  width: 100%;
-}
-
-.section-header-title {
+  padding: 3px 5px;
   font-weight: bold;
 }
 
-.vbox-container {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-}
-
-.wbox {
-  display: -webkit-box;
-  -webkit-box-align: stretch;
-  -webkit-box-flex: 1;
-}
-
-.wbox-dev-mode {
-  -webkit-box-align: stretch;
-  -webkit-box-flex: 1;
-}
-
-.developer-mode {
+#extension-options {
   background: #f4f6fc;
   border-bottom: 1px solid #edeff5;
   font-size: 85%;
-  padding-bottom: 0.8em;
-  padding-left: 10px;
-  padding-top: 0.8em;
-  width: 100%;
+  padding: 0.8em 10px;
 }
  
-.extension {
-  border-bottom: 1px solid #cdcdcd;
+#extension-footer {
+  text-align: right;
+  padding: 10px 0px;
 }
- 
-.credits {
+
+#credits {
+  font-size: 85%;
   margin-top: 1em;
   text-align: right;
 }
 
-button {
-  font-size: 100%;
-}
-
-.info-message {
+#info-message {
   -webkit-transition-duration: 1s;
   display: none;
   background:#FDFFBD none repeat scroll 0 0;
