Refactor the entire codebase.
Some reorganization skills I learned from other extensions. Applying
them here since it would be easier to manage this way.

--- a/css/options.css
+++ b/css/options.css
@@ -27,7 +27,7 @@ padding: .4em;
 
 
 h1 {
-  background: url("icon48.png") 0px 30px no-repeat;
+  background: url("/img/icon48.png") 0px 30px no-repeat;
   display: inline;
   margin: 0;
   padding-bottom: 43px;
