Feature: Implement bypass cache as an extra setting
 - This will add another property to bypass
 - Some code cleanup
 - Made options a bit more clearer
 - Updated to manifest v3

Fixes #29

--- a/css/options.css
+++ b/css/options.css
@@ -84,12 +84,13 @@ em {
 
 #info-message {
   transition-duration: 1s;
-  display: none;
+  display: inline;
+  opacity: 0;
   background: #FDFFBD none repeat scroll 0 0;
   border-radius: 5px;
   border-radius: 5px;
   padding: 7px 10px;
-  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .note {
