--- a/css/options.css
+++ b/css/options.css
@@ -83,6 +83,8 @@ em {
 }
 
 #info-message {
+  position: fixed;
+  transition: opacity;
   transition-duration: 1s;
   display: inline;
   opacity: 0;
@@ -90,7 +92,7 @@ em {
   border-radius: 5px;
   border-radius: 5px;
   padding: 7px 10px;
-  margin-left: 30px;
+  margin-left: 10px;
 }
 
 .note {
